# VoxVera

./: .dockerignore  .flake8  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  UPCOMING_RELEASE.md  install.ps1  install.sh  package-lock.json  pyproject.toml  requirements.txt  serve_with_onionshare.sh  setup.sh  support-matrix.json  test_cli_import.py  test_out.html  test_pkg.py  uninstall.ps1  uninstall.sh  voxvera-install.sh  voxvera-run.sh
.devcontainer/: devcontainer.json
.github/workflows/: binaries.yml  ci.yml  e2e.yml  release.yml
ci/: test-e2e.sh
docs/: linux-hosting-validation.md  macos-validation-checklist.md  multi-language-support.md  native-tester-guide.md  platform-support-matrix.md  roadmap-platform-parity.md  roadmap-v0.2.0.md  troubleshooting.md  usage.md  windows-validation-checklist.md
docs/ar/: CONTRIBUTING.md  usage.md
docs/de/: CONTRIBUTING.md  usage.md
docs/en/: usage.md
docs/es/: usage.md
docs/fa/: usage.md
docs/fr/: templates.md  usage.md
docs/he/: troubleshooting.md  usage.md
docs/hi/: usage.md
docs/ja/: AGENTS.md  usage.md
docs/pt/: docker.md  usage.md
docs/ru/: docker.md  usage.md
docs/sw/: usage.md
docs/templates/: AGENTS.md  CONTRIBUTING.md  troubleshooting.md  usage.md
docs/tr/: CONTRIBUTING.md  usage.md
docs/zh/: docker.md  usage.md
gui/: README.md
gui/electron/: index.html  main.js  package.json  preload.js  runtime-utils.js  runtime-utils.test.js  tor.js
host/aosp/: config.json  extract_form_fields.sh  nostr.html  submission_form.txt
host/example/: index.html
host/jesus/: config.json
host/voxvera/: config.json  index.html  nostr.html
imports/: aosp.json  bitcoin.json  blank.json  example.json  jesus.json  meshtastic.json  nostr.json  voxvera.json
packaging/: build_appimage.sh  build_deb.sh  build_dmg.sh  build_flatpak.sh
packaging/chocolatey/: voxvera.nuspec
packaging/flatpak/: org.voxvera.VoxVera.desktop  org.voxvera.VoxVera.yml
packaging/homebrew/: voxvera.rb
scripts/: build_binaries.sh  check.sh  docker-entrypoint.sh  docker-healthcheck.sh  docker-runtime-smoke.sh  download_tor.sh  linux-recovery-check.sh  platform-smoke.sh  validate-release-artifacts.sh
site/: CNAME  config.json  index.html
src/: README.md  config.json  create_flyer.sh  generate_qr.sh  import_from_json.sh  index-master.html  index.html  nostr-master.html  nostr.html  obfuscate_index.sh  obfuscate_nostr.sh  to-do.txt
templates/voxvera/: index.html  nostr.html
tests/: test_cli.py  test_e2e.py  test_integrity.py
voxvera/: __init__.py  build.py  cli.py
voxvera/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  he.json  hi.json  (+6 more)
(+41 files in other folders)
