[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxvera*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
voxvera = ["templates/**", "src/**", "resources/**", "locales/**", "resources/bin/**"]

[project]
name = "voxvera"
version = "0.1.1"
description = "VoxVera CLI utilities"
readme = "README.md"
authors = [{name = "VoxVera"}]
requires-python = ">=3.9"
dependencies = [
    "InquirerPy",
    "rich",
    "qrcode[pil]",
    "Pillow",
    "jsmin",
    "htmlmin2",
    "wcwidth",
]

[project.optional-dependencies]
test = [
    "pytest",
]
e2e = [
    "pytest",
    "requests[socks]",
]
all = [
    "pytest",
    "requests[socks]",
]

[project.scripts]
voxvera = "voxvera.cli:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests that require external services",
]
